--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "bemmer",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Class name generator for React.js with BEM.",
-  "main": "bemmer.js",
+  "main": "./dist/bemmer.js",
   "scripts": {
-    "build": "babel src/bemmer.es6 -o bemmer.js",
+    "build": "babel src/bemmer.es6 -o ./dist/bemmer.js",
     "test": "mocha --colors --growl --compilers es6:babel/register --ui bdd --reporter spec ./src/**/__tests__/**/*.spec.*",
-    "tdd": "mocha --watch --colors --growl --compilers es6:babel/register --ui bdd --reporter spec ./src/**/__tests__/**/*.spec.*",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -25,8 +24,8 @@
   },
   "homepage": "https://github.com/axross/bemmer",
   "devDependencies": {
-    "babel": "^4.6.6",
-    "mocha": "^2.1.0",
-    "should": "^5.0.1"
+    "babel": "^5.4.7",
+    "expect.js": "^0.3.1",
+    "mocha": "^2.2.5"
   }
 }
