--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bemmer",
   "version": "0.2.0",
-  "description": "Class name generator for React.js with BEM.",
+  "description": "The solution for your fetid CSS class name definition.",
   "main": "./dist/bemmer.js",
   "scripts": {
     "build": "babel src/bemmer.es6 -o ./dist/bemmer.js",
