--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "babel": "babel sources/bemmer.es6 -o ./distributions/bemmer.js",
     "test": "mocha --colors --growl --compilers es6:babel/register --ui bdd --reporter spec ./sources/**/__tests__/**/*.spec.*",
-    "prepublish": "npm run build"
+    "prepublish": "npm run babel"
   },
   "repository": {
     "type": "git",
