--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "BEM-like simple classname builder.",
   "main": "./distributions/bemmer.js",
   "scripts": {
-    "babel": "babel sources/bemmer.es6 -o ./distributions/bemmer.js",
-    "test": "mocha --colors --growl --compilers es6:babel/register --ui bdd --reporter spec ./sources/**/__tests__/**/*.spec.*",
+    "babel": "babel ./sources/bemmer.es6 -o ./distributions/bemmer.js",
+    "test": "mocha --colors --compilers es6:babel/register --ui bdd --reporter spec ./tests/**/*.spec.*",
     "prepublish": "npm run babel"
   },
   "repository": {
