--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "homepage": "https://github.com/axross/bemmer",
   "devDependencies": {
-    "babel": "^5.8.23",
-    "expect.js": "^0.3.1",
-    "mocha": "^2.3.2"
+    "ava": "0.12.0",
+    "babel-cli": "6.6.4",
+    "babel-core": "6.6.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-register": "6.6.0"
   }
 }
