--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "babel-core": "6.6.4",
     "babel-preset-es2015": "6.6.0",
     "babel-register": "6.6.0"
+  },
+  "dependencies": {
+    "invariant": "2.2.0"
   }
 }
