--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ava": "0.12.0",
     "babel-cli": "6.6.4",
     "babel-core": "6.6.4",
+    "babel-plugin-transform-object-assign": "6.5.0",
     "babel-preset-es2015": "6.6.0",
     "babel-register": "6.6.0"
   },
