--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "babel-core": "6.6.4",
     "babel-plugin-transform-object-assign": "6.5.0",
     "babel-preset-es2015": "6.6.0",
-    "babel-register": "6.6.0"
+    "babel-register": "6.6.0",
+    "eslint": "2.3.0"
   },
   "dependencies": {
     "invariant": "2.2.0"
