--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./distributions/bemmer.js",
   "scripts": {
     "babel": "babel ./sources --out-dir ./distributions",
-    "test": "ava './tests/**/*.test.js'"
+    "test": "ava './tests/**/*.test.js' -t | tap-diff"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,8 @@
     "babel-plugin-transform-object-assign": "6.5.0",
     "babel-preset-es2015": "6.6.0",
     "babel-register": "6.6.0",
-    "eslint": "2.3.0"
+    "eslint": "2.3.0",
+    "tap-diff": "0.1.1"
   },
   "dependencies": {
     "invariant": "2.2.0"
