--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "bemmer",
   "version": "1.1.0",
   "description": "BEM-like simple classname builder.",
-  "main": "./distributions/index.js",
+  "main": "./distribution/index.js",
   "scripts": {
-    "babel": "babel ./sources --out-dir ./distributions",
-    "test": "ava './tests/**/*.test.js' -t | tap-diff"
+    "tsc": "tsc",
+    "test": "npm run tsc && ava './test/**/*.test.js'"
   },
   "repository": {
     "type": "git",
@@ -24,16 +24,7 @@
   },
   "homepage": "https://github.com/axross/bemmer",
   "devDependencies": {
-    "ava": "0.12.0",
-    "babel-cli": "6.6.4",
-    "babel-core": "6.6.4",
-    "babel-plugin-transform-object-assign": "6.5.0",
-    "babel-preset-es2015": "6.6.0",
-    "babel-register": "6.6.0",
-    "eslint": "2.3.0",
-    "tap-diff": "0.1.1"
-  },
-  "dependencies": {
-    "invariant": "2.2.0"
+    "ava": "0.15.2",
+    "typescript": "2.0.0"
   }
 }
